Add comprehensive portfolio documentation
Co-authored-by: MaxTekpa494 <153927882+MaxTekpa494@users.noreply.github.com>